k8s/router-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: des-router
spec:
  selector:
    app: des-router
  ports:
    - port: 80
      targetPort: 8000
      name: http
  type: LoadBalancer
